Fix text-align of alerts

--- a/src/app/components/app.scss
+++ b/src/app/components/app.scss
@@ -340,3 +340,7 @@ relations-view .fieldvalue:hover {
 a {
   -webkit-user-drag: none;
 }
+
+.alert {
+  text-align: center;
+}
